2. Latihan Element Dinamis | Fix Font Not Centered
Font not centered when using the default Calibri, sans-serif

--- a/7. Proyek JavaScript dan DOM/Soal-2/stylesheet.css
+++ b/7. Proyek JavaScript dan DOM/Soal-2/stylesheet.css
@@ -9,7 +9,7 @@ form, input, div, textarea {
 }
 
 body {
-  font-family: Calibri, sans-serif;
+  font-family: System-ui;
 }
 
 li {
